# PicPurge

./: LICENSE  README.md  main.py  pyproject.toml  pytest.ini
.github/workflows/: release.yml
src/dedup/: analyzer.py  cli.py  core.py  metadata.py  ui.py
src/picpurge/: analyzer.py  cli.py  ui.py
tests/: conftest.py  test_analyzer.py  test_core.py  test_env.py  test_integration.py  test_metadata.py
