[project]
name = "picpurge"
version = "0.1.0"
description = "High-performance parallelized media deduplicator for S3 backups."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Abhishek Mishra", email = "abhishek@example.com" }
]
license = { text = "MIT" }
dependencies = [
    "imagehash>=4.3.2",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=12.1.1",
    "pillow-heif>=1.3.0",
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[project.scripts]
picpurge = "picpurge.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/picpurge"]
